<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="16dp"
    android:background="@color/todo_background_todo_app"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/hint_todo"
        android:textColor="@color/white"
        android:textColorHint="#9CFFFFFF" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/todo_business_category"
            android:checked="true"
            android:text="@string/todo_Business"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/todo_personal_category"
            android:text="@string/todo_Personal"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:buttonTint="@color/todo_other_category"
            android:text="@string/todo_Other"
            android:textColor="@color/white" />
    </RadioGroup>
    <Button
        android:id="@+id/btnAddTask"
        android:backgroundTint="@color/todo_accent"
        android:text="@string/todo_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>