<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="60dp"
    tools:context=".imc.ImcActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/genH"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toStartOf="@+id/genM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_male"
                app:tint="@color/white">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/title_text">

            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/genM"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/genH"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_female"
                app:tint="@color/white">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/title_text">

            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genH">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/txtHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 CM"
                android:textColor="@color/white"
                android:textSize="38sp" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="100"
                android:backgroundTint="@color/background_fab"
                android:valueTo="200"
                android:hint="@string/heighthint"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/peso"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toStartOf="@id/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cm">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/tvweight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0 KG"
                android:textColor="@color/white"
                android:textSize="32sp" />

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/rsWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:backgroundTint="@color/background_fab"
                    android:valueFrom="20"
                    android:valueTo="200"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="18dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/peso"
        app:layout_constraintTop_toBottomOf="@id/cm">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textColor="@color/title_text"/>
            <TextView
                android:id="@+id/tvage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:backgroundTint="@color/background_fab"
                    android:src="@drawable/ic_sub"
                    app:tint="@color/white"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAddAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:backgroundTint="@color/background_fab"
                    android:src="@drawable/ic_add"
                    app:tint="@color/white"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCal"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:text="@string/calculate"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/background_fab"
        app:layout_constraintTop_toBottomOf="@+id/peso"/>

</androidx.constraintlayout.widget.ConstraintLayout>